# PaDiM-Anomaly-Detection-Localization-master

./: main.py  pyproject.toml
datasets/: mvtec.py
